# LainNoRisuto

./: .gitignore  README.md
aichess/: avraic.brd  avraic.sch
analog-led/analog-led/: analog-led.kicad_pcb  analog-led.sch
atbd/: README.md
atbd/doc/: Makefile  atdb.tex
atbd/schematic/: attinydevboard.brd  attinydevboard.sch
christmascard/: README.md
christmascard-m2/schematic/: christmas_card.brd  christmas_card.sch
christmascard-v2/: README.md
christmascard-v2/schematic/: christmas_card.brd  christmas_card.sch
christmascard/firmware/: CMakeLists.txt  Makefile  animation.c  animation.h  christmascard.h  driver.c  ws2811_8.c  ws2811_8.h
christmascard/gerber/: christmas_card.GBS  christmas_card.GTL  christmas_card.GTO
christmascard/schematic/: christmas_card.brd  christmas_card.sch
clock-matrix/: README.md
clock-matrix/firmware/: clock-matrix-driver.c  clock-matrix-driver.h  driver.c
clock-matrix/schematic/: clock-matrix.brd  clock-matrix.sch
clock/schematic/: clock.brd  clock.sch
cmake/: generic-gcc-avr.cmake
dev_board/breadboarddev/: breadboarddev.brd  breadboarddev.sch  breadboarddev2.brd  breadboarddev2.sch
game-console/firmware/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
game-console/gameConsole/: gameConsole.kicad_pcb  gameConsole.kicad_pro  gameConsole.kicad_sch  gameConsole.sch  sym-lib-table
led-matrix/led-matrix/: file6341BE75.sch  led-matrix-config.sch  led-matrix.kicad_pcb  led-matrix.kicad_pro  led-matrix.sch
ledboard/: Makefile  README.md
ledboard/docs/: ledboard.tex
ledboard/firmware/: Makefile  animation.c  animation.h  bits.c  driver.c  ledboard.h
ledboard/gerber/: simpleledboard.GBL  simpleledboard.GBS  simpleledboard.GTL  simpleledboard.TXT
ledboard/schematic/: simpleledboard.brd  simpleledboard.sch
lfsr-display/: README.md
picovisual/: CMakeLists.txt  README.md
picovisual/firmware/: CMakeLists.txt  engine_usb.c  engine_usb.h  graphic_math.h  graphic_pico_def.h  math.h  pico_main.c  picovisual.c  picovisual.h  tusb_config.h
picovisual/firmware/drivers/: indication_led.h
picovisual/firmware/gfx/: gfx.c  gfx.h
picovisual/firmware/usb/: usb_cdc.c  usb_descriptors.c  usb_descriptors.h  usb_video.c  usb_video.h
sunalarm/: README.md
tiny-blink/: README.md
tiny-blink-mcu/: .clangd
(+145 files in other folders)
